# ctx-gen-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ctx_gen_mcp/: AGENTS_md_template.md  __init__.py  agent.md  analyze_codebase.py  install.py  server.py  skill.md
