[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctx-gen-mcp"
version = "1.0.0"
description = "Code context description generator - MCP Server + OpenCode plugin for progressive AI-friendly docs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Roben.liu"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.7.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "rich>=13.7.0"]

[project.scripts]
# One-click setup command
ctx-gen-setup = "ctx_gen_mcp.install:main"
# Run MCP server directly
ctx-gen-server = "ctx_gen_mcp.server:mcp_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ctx_gen_mcp" = [
    "skill.md",
    "agent.md",
    "AGENTS_md_template.md",
]
